# VocabularyNotes

./: .gitignore  README.md  alembic.ini  pyproject.toml  test.py
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 1775086a6fd5_create_user_table.py  4977d4cd12a6_added_dictlist_table.py  79330dab8134_updated_simple_user_table.py  8c704b321d85_fixed_repr.py  94a5a5612bd4_added_dictlist_word_and_lang_tables.py  b1637d28f51b_updated_user_table.py  b5cfe8407e2d_added_association_proxy.py  bee699f67b8e_fixed_dictlist.py  cc00bbc8d4ba_added_lang_word_dictlist_tables.py  e4f1e03e69dd_fixed_some_repr.py  e827b24ced56_fixed_id_init.py
app/: auth_utils.py  constants.py  crud.py  database.py  dependencies.py  email_utils.py  exceptions.py  filters_schemas.py  main.py  models.py  schemas.py  test.py
app/routers/: auth.py  dictlists.py  languages.py  users.py  words.py
app/services/: dictlists.py  languages.py  users.py  word_contexts.py  words.py
app/test_routers/: conftest.py  test_dictlists.py  test_languages.py  test_users.py  test_words.py
app/utils/: auth_utils.py  email_utils.py
