[project]
name = "vocabularynotes"
version = "0.1.0"
description = "An application for managing your own e-dictionary"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]

[tool.ruff.lint]
select = ["A", "B", "C4", "E", "F", "I", "N", "W", "RSE", "DTZ", "T20", "PTH", "PT", "FAST", "RUF"]

